Add : - get position button - steppers control buttons (M17/M18) - laser control button

--- a/src/settings.html
+++ b/src/settings.html
@@ -88,8 +88,28 @@
           </label>
           <br/>
           <label class="checkbox-inline">
+            <input name="show-spindle" type="checkbox" ng-model="settings.workspace_show_zmove">
+            show Z move
+          </label>
+          <br/>
+          <label class="checkbox-inline">
+            <input name="show-spindle" type="checkbox" ng-model="settings.workspace_show_getpos">
+            show get position button
+          </label>
+          <br/>
+          <label class="checkbox-inline">
+            <input name="show-spindle" type="checkbox" ng-model="settings.workspace_show_steppers">
+            show steppers controls
+          </label>
+          <br/>
+          <label class="checkbox-inline">
             <input name="show-spindle" type="checkbox" ng-model="settings.workspace_show_spindle">
             show spindle controls
+          </label>
+          <br/>
+          <label class="checkbox-inline">
+            <input name="show-spindle" type="checkbox" ng-model="settings.workspace_show_laser">
+            show laser controls
           </label>
           <br/>
           <label class="checkbox-inline">
