--- a/src/main.html
+++ b/src/main.html
@@ -1,7 +1,7 @@
 <html ng-app="gcodeSender" ng-csp>
 <head>
   <meta charset="utf-8" />
-	<title>gcode-viewer</title>
+	<title>gcode-viewer DEV</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="lib/angular-csp.css">
