--- a/src/loadfile.html
+++ b/src/loadfile.html
@@ -20,6 +20,13 @@
                 </button>
               </div>
 
+              <!--<div class="btn-group btn-group-sm">
+                <button class="btn btn-warning" ng-click="fileService.checkBounds()" ng-disabled="fileService.api.commandSequence.length > 0">
+                  <span class="glyphicon glyphicon-ok"></span>
+                  check bounds
+                </button>
+              </div>-->
+
               <div class="btn-group btn-group-sm">
                 <button class="btn btn-success" ng-click="sendFileToMachine()" ng-disabled="!machineService.isConnected">
                   <span class="glyphicon glyphicon-transfer"></span>
